--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,23 @@
 @import "tailwindcss";
+.animated-div {
+  position: relative;
+  opacity: 0;
+  transform: translateX(-100%);
+  transition: opacity 1s, transform 1s; /* Smooth transition */
+}
+@keyframes rightSwipe {
+  0% {
+    opacity: 1;
+    transform: translateX(-100%)
+  }
+  50%{
+    opacity: 1;
+    transform: translate(0%);
+  }
+  100% {
+    opacity: 2;
+    shape-rendering: optimizeSpeed;
+    transform: translateX(0%);
+
+  }
+}
